--- a/Views/DangKyXetTuyens/dkxthocba.cshtml
+++ b/Views/DangKyXetTuyens/dkxthocba.cshtml
@@ -532,21 +532,21 @@
             HK1: $('#txt_m1_k1').val(),
             HK2: $('#txt_m1_k2').val(),
             HK3: $('#txt_m1_k3').val(),
-            HK3: $('#lb_tb_m1').val(),
+            DiemTrungBinh: $('#lb_tb_m1').val(),
         };
         let Dkxt_Diem_M2 = {
             TenMon1: $('#lb_tenmon_2').val(),
             HK1: $('#txt_m2_k1').val(),
             HK2: $('#txt_m2_k2').val(),
             HK3: $('#txt_m2_k3').val(),
-            HK3: $('#lb_tb_m2').val(),
+            DiemTrungBinh: $('#lb_tb_m2').val(),
         };
         let Dkxt_Diem_M3 = {
             TenMon1: $('#lb_tenmon_3').val(),
             HK1: $('#txt_m3_k1').val(),
             HK2: $('#txt_m3_k2').val(),
             HK3: $('#txt_m3_k3').val(),
-            HK3: $('#lb_tb_m3').val(),
+            DiemTrungBinh: $('#lb_tb_m3').val(),
         };
         let DiemTBMon1 = $('#lb_tb_m1').val();
         let DiemTBMon2 = $('#lb_tb_m2').val();
