--- a/Views/LePhiXetTuyens/Index.cshtml
+++ b/Views/LePhiXetTuyens/Index.cshtml
@@ -4,101 +4,106 @@
 }
 <script>
     $("document").ready(function () {
-      loadData();
-      $('#selectFile').hide();
-      $('#uploadFile').hide();
-      $("#uploadFile").click(function () {
-        var files = $("#selectFile")[0].files;
+        loadData();
+        $('#selectFile').hide();
+        $('#uploadFile').hide();
+        $("#uploadFile").click(function () {
+            var files = $("#selectFile")[0].files;
 
-        if (files.length > 0) {
-          var formData = new FormData();
-          for (var i = 0; i < files.length; i++) {
-            formData.append("filesMinhChung", files[i]);
-          }
-          $.ajax({
-            url: "/LePhiXetTuyens/UploadLePhiMinhChung",
-            type: "POST",
-            data: formData,
-            processData: false,
-            contentType: false,
-            success: function (response) {
-              if(response.success){
-                   showToast(
-                    "Thông báo",
-                    "Tải lên minh chứng thành công!",
-                    "bg-error"
-                  );
-              }else{
-                  showToast(
+            if (files.length > 0) {
+                var formData = new FormData();
+                for (var i = 0; i < files.length; i++) {
+                    formData.append("filesMinhChung", files[i]);
+                }
+                $.ajax({
+                    url: "/LePhiXetTuyens/UploadLePhiMinhChung",
+                    type: "POST",
+                    data: formData,
+                    processData: false,
+                    contentType: false,
+                    success: function (response) {
+                        if (response.success) {
+                            showToast(
+                                "Thông báo",
+                                "Tải lên minh chứng thành công!",
+                                "bg-error"
+                            );
+                        } else {
+                            showToast(
+                                "Cảnh báo",
+                                "Tải lên minh chứng thất bại! Vui lòng thử lại",
+                                "bg-error"
+                            );
+                        }
+                        $('#lephiForm')[0].reset();
+                    },
+                    error: function (xhr, status, error) {
+                        // Handle the upload error
+                        showToast(
+                            "Cảnh báo",
+                            "Tải lên minh chứng thất bại! Vui lòng thử lại",
+                            "bg-error"
+                        );
+                        $('#lephiForm')[0].reset();
+                    },
+                });
+            } else {
+                showToast(
                     "Cảnh báo",
-                    "Tải lên minh chứng thất bại! Vui lòng thử lại",
+                    "Vui lòng chọn file minh chứng!",
                     "bg-error"
-                  );
-              }
-              $('#lephiForm')[0].reset();
-            },
-            error: function (xhr, status, error) {
-              // Handle the upload error
-              showToast(
-                "Cảnh báo",
-                "Tải lên minh chứng thất bại! Vui lòng thử lại",
-                "bg-error"
-              );
-              $('#lephiForm')[0].reset();
-            },
-          });
-        } else {
-          showToast(
-            "Cảnh báo",
-            "Vui lòng chọn file minh chứng!",
-            "bg-error"
-          );
-        }
-      });
+                );
+            }
+        });
     });
     function loadData() {
-      $.ajax({
-        url: "/LePhiXetTuyens/GetAllLePhi",
-        type: "GET",
-        contentType: "application/json;charset=utf-8",
-        success: function (response) {
-            console.log(response);
-          if (response.success) {
-            let data = response.data;
-            if (data.length > 0) {
-              $("#selectFile").show();
-              $("#uploadFile").show();
-              let html = "";
-              $.each(result, function (key, item) {
-                html += "<tr>";
-                // html += '<td>' + item.Khoa_MaKhoa + '</td>';
-                // html += '<td>' + item.Khoa_TenKhoa + '</td>';
-                // html += '<td>' + item.Khoa_DiaChi + '</td>';
-                // html += '<td>' + dienThoai + '</td>';
-                // html += '<td>' + email + '</td>';
+        $.ajax({
+            url: "/LePhiXetTuyens/GetAllLePhi",
+            type: "GET",
+            contentType: "application/json;charset=utf-8",
+            success: function (response) {
+                console.log(response);
+                if (response.success) {
+                    let data = response.data;
+                    let lePhi = response.lePhi;
+                    console.log(data)
+                    if (data.length > 0) {
+                        $("#selectFile").show();
+                        $("#uploadFile").show();
+                        let html = "";
+                        $.each(data, function (key, item) {
+                            html += "<tr>";
+                            html += '<td>' + item.Dkxt_NguyenVong + '</td>';
+                            html += '<td>' + item.Dkxt_Nganh.Nganh_TenNganh + '</td>';
+                            // html += '<td>' + item.Khoa_DiaChi + '</td>';
+                            html += '<td></td>';
+                            if (!lePhi || lePhi.Lpxt_TrangThai == 0) {
+                                html += `<td><span class="badge bg-danger">Chưa đóng phí</span></td>`;
+                            }
 
-                // html += `<td class="text-center align-middle"><a class="btn btn-primary mx-2" href="${url}">Sửa</a>`;
-                // html += `<a class="btn btn-danger delete-button" data-id="${item.Khoa_ID}" data-bs-toggle="modal" data-bs-target="#deleteModal">Xoá</a></td>`;
-                html += "</tr>";
-              });
-            }
-          } else {
-          }
-        },
-        error: function (xhr, status, error) {
-          // Handle any errors
-          console.error(error);
-        },
-      });
+                            // html += `<td class="text-center align-middle"><a class="btn btn-primary mx-2" href="${url}">Sửa</a>`;
+                            // html += `<a class="btn btn-danger delete-button" data-id="${item.Khoa_ID}" data-bs-toggle="modal" data-bs-target="#deleteModal">Xoá</a></td>`;
+                            html += "</tr>";
+                        });
+                        $('.tbody').html(html);
+                    }
+                } else {
+                }
+            },
+            error: function (xhr, status, error) {
+                // Handle any errors
+                console.error(error);
+            },
+        });
     }
 
     function showToast(title, message, bgColor) {
-      $("#myToast .toast-header .me-auto").text(title);
-      $("#myToast .toast-body").text(message);
-      $("#myToast .toast")
-        .removeClass("bg-success bg-danger")
-        .addClass(bgColor);
-      $("#myToast").toast("show");
+        $("#myToast .toast-header .me-auto").text(title);
+        $("#myToast .toast-body").text(message);
+        $("#myToast .toast")
+            .removeClass("bg-success bg-danger")
+            .addClass(bgColor);
+        $("#myToast").toast("show");
     }
 </script>
 
