--- a/Views/ThiSinhDangKies/Edit.cshtml
+++ b/Views/ThiSinhDangKies/Edit.cshtml
@@ -344,7 +344,7 @@
                 <div class="row gx-xxl-3 mb-1">
                     <div class="col-md-3">
                         <label class="form-label mb-1" for="ThiSinh_CCCD">Căn cước công dân <a style="color:red; text-decoration:none">(*)</a> </label>
-                        <input class="form-control" id="ThiSinh_CCCD" name="input_cccd_ts" type="text" placeholder="Số căn cước công dân" value="" />
+                        <input class="form-control" id="ThiSinh_CCCD" name="input_cccd_ts" type="text" placeholder="Số căn cước công dân" value="" disabled />
                         <span id="ThiSinh_CCCD_Error" class="small mb-1 text-danger"></span>
                     </div>
                     <div class="col-md-3">
